fixed stretched sidbar images on safari

--- a/app/assets/stylesheets/components/small_product.scss
+++ b/app/assets/stylesheets/components/small_product.scss
@@ -15,6 +15,7 @@ a.small-product-link {
     img {
       flex: 1 0 21%;
       max-width: 50px;
+      max-height: 50px;
     }
 
     span {
